# glaze_bot

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  bash.exe.stackdump  brain.py  capture.py  gaming-companion-guide.md  main.py  mic.py  package.json  parties.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  settings.json  tray.py  turbo.json  ui_bridge.py  voice.py
.github/workflows/: ci.yml  deploy-discord-bot.yml  deploy-marketing.yml  deploy-portal.yml  deploy-supabase.yml  test-integration.yml
admin_config_yaml/: glazebot-config-2026-02-27.yaml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  capture.rs  logging.rs  main.rs  oauth.rs  overlay.rs  ptt.rs  tts.rs
apps/discord-bot/: Dockerfile  package.json
apps/marketing/: astro.config.mjs  package.json  tsconfig.json  wrangler.toml
apps/portal/: package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  wrangler.toml
characters/: abuela_rosa.json  bingo.json  captain_obvious.json  coach_brick.json  conspiracy_carl.json  dj_blaze.json  grandma_dot.json  hype.json  jinx.json  karen.json  mort.json  narrator.json  professor_quill.json  sage.json  sir_reginald.json  vex.json
docs/: cost-analysis.html
scripts/: generate_avatars.py  list_voices.py  sync-secrets.sh
supabase/: config.toml  seed.sql
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: app.css  (+1 more)
(+209 files in other folders)
