[package]
name = "glazebot-desktop"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.14"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
cpal = "0.15"
whisper-rs = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
